--- a/views/home.ejs
+++ b/views/home.ejs
@@ -65,7 +65,7 @@
     <h1>Make your list</h1>
     <form action="/todolist" method="POST">
         <label for="todo">Task:</label>
-        <input type="text" name="name" placeholder="Todo" id="todo">
+        <input type="text" name="name" placeholder="Todo" id="todo" autocomplete="off">
         <button>Create</button>
     </form>
     <div class="container">
