--- a/views/create.ejs
+++ b/views/create.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit</title>
+    <title>Create</title>
     <style>
         body {
             font-family: 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -67,7 +67,7 @@
     <h1 class="display-1">Write your note here</h1>
     <form action="/notes" method="POST" class="p-3">
         <div class="form-group mt-4 text-center">
-            <input type="text" placeholder="Heading" name="heading" id="heading" class="px-2">
+            <input type="text" placeholder="Heading" name="heading" id="heading" class="px-2" autocomplete="off">
         </div>
         <div class="form-group mt-2 text-center">
             <textarea name="matter" id="matter" cols="100" rows="15" placeholder="Body"></textarea>
